--- a/frontend/src/components/PageTransition/PageTransition.module.scss
+++ b/frontend/src/components/PageTransition/PageTransition.module.scss
@@ -5,7 +5,7 @@
 	right: 0;
 	bottom: 0;
 	background: rgba(0, 0, 0, 0);
-	z-index: 9999;
+	z-index: var(--z-index-popup);
 	transition: background 0.4s ease;
 
 	&.active {
