--- a/frontend/src/styles/root.scss
+++ b/frontend/src/styles/root.scss
@@ -1,6 +1,7 @@
 
 :root {
   --accent-color: #007AFF;
+  --sub-accent-color: #479FFF;
   --innactive-color: #7D7D7F;
 
   --loader-icon: #ffffff;
@@ -14,6 +15,8 @@
 
   --border-color: #D8D8D8;
 
+  --stroke-separator-primary: rgba(12, 13, 14, .16);
+
   //layers
   --z-index-base: 0;
   --z-index-content: 1;
@@ -23,23 +26,31 @@
   --z-index-modal: 12;
   --z-index-tooltip: 13;
   --z-index-popover: 14;
-  --z-index-loader: 15;
+  --z-index-popup: 15;
+  --z-index-loader: 20;
   --z-index-topmost: 100;
 
 
   //transitions speed
+  --animation-speed-0: .2s;
   --animation-speed-1: .3s;
   --animation-speed-2: .6s;
   --animation-speed-3: 1s;
 
   //transitions animation
   --transition-ease: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  --transition-ease-base: ease;
 
   //transitions
   --transition-ease-fast: var(--animation-speed-1) var(--transition-ease);
-
+  --transition-ease-base-fast: var(--animation-speed-0) var(--transition-ease-base);
 
   --dev-header-height: 50px;
+
+  --padding-xs: 10px;
+  --padding-s: 20px;
+
+  --margin-s: 20px;
 
 }
 
@@ -53,6 +64,8 @@
     --text-secondary-color: #7B7C7C;
 
     --border-color: #333438;
+
+    --stroke-separator-primary: rgba(255, 255, 255, .12);
   }
 }
 
